** The convergence condition for gsl_multiroots_test_delta now accepts
dxi == 0.

** Improved functions gsl_ldexp and gsl_frexp to handle the full range
of double precision numbers in all cases.

** Added new quasi random generators gsl_qrng_halton and
gsl_qrng_reversehalton which support dimensions up to 1229.

** Added function gsl_multifit_linear_residuals for computing the
residuals of the fit

* What was new in gsl-1.10:

** License updated to GNU GPL version 3.

** Added support for generalized eigensystems

** Added function gsl_stats_correlation to compute Pearson correlation
of two datasets

** Added the new function gsl_sf_expint(n,x) for computing the n-th
order exponential integral.

** Added functions gsl_vector_isnonneg and gsl_matrix_isnonneg.

** Added functions gsl_matrix_subrow and gsl_matrix_subcolumn

** Extended Cholesky routines to complex matrices

** Added support in gsl_ieee_set_mode for controlling SSE exceptions
and rounding through the MXCSR control word on x86 processors.

** The autoconf macro AM_PATH_GSL has been renamed to AX_PATH_GSL, to
avoid conflicts with the autoconf namespace.

** Improved handling of underflow in gsl_eigen_symm.

** The function gsl_multiroot_fdjacobian now returns the error code
GSL_ESING if any of the columns of the computed jacobian matrix are
zero.  This may occur if the step size of the derivative is too small.

** Extended the function gsl_sf_beta_inc(a,b,x) to handle cases where
a<0 or b<0.

** Fixed the round-off error estimate in gsl_deriv_{central,backwards,
forward} to correctly account for numerical error in the step-size h.

** Fixed gsl_cdf_beta_Pinv, gsl_cdf_gamma_Pinv, gsl_cdf_beta_Pinv to
avoid returning spurious values for large parameters when the
iteration did not converge.  If the iteration cannot converge, GSL_NAN
is returned.

** gsl_ran_dirichlet now handles smaller values of alpha[] without
underflow, avoiding a NaN in the returned value.
